--- a/package.json
+++ b/package.json
@@ -53,6 +53,6 @@
     "prettier": "2.3.0"
   },
   "lint-staged": {
-    "*.{js,css,md,ts,tsx}": "prettier --write"
+    "*.{js,jsx,css,md,ts,tsx}": "prettier --write"
   }
 }
