--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.0",
     "eslint-config-prettier": "^8.3.0",
     "json-server": "^0.16.3",
+    "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -25,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "json-server": "json-server __json_server_mock__/db.json --watch",
+    "json-server": "json-server __json_server_mock__/db.json --watch --port 4000",
     "prepare": "husky install"
   },
   "eslintConfig": {
