--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "eslint-config-prettier": "^8.3.0",
+    "jira-dev-tool": "^1.7.61",
     "json-server": "^0.16.3",
     "qs": "^6.10.1",
     "react": "^17.0.2",
@@ -27,7 +28,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "json-server": "json-server __json_server_mock__/db.json --watch --port 4000 --middlewares ./__json_server_mock__/middleware.js",
     "prepare": "husky install"
   },
   "eslintConfig": {
@@ -56,5 +56,8 @@
   },
   "lint-staged": {
     "*.{js,jsx,css,md,ts,tsx}": "prettier --write"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
